--- a/Bee_Classification_Assignment.ipynb
+++ b/Bee_Classification_Assignment.ipynb
@@ -146,7 +146,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x10e19afd0>"
+       "<matplotlib.image.AxesImage at 0x1023851d0>"
       ]
      },
      "execution_count": 4,
@@ -186,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1a2c7013c8>"
+       "<matplotlib.image.AxesImage at 0x1a20858978>"
       ]
      },
      "execution_count": 5,
@@ -263,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x10e27f8d0>"
+       "<matplotlib.image.AxesImage at 0x1ab75eecc0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "(3969, 42849)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "[5 rows x 42849 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "4922    1.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,6 +600,53 @@
    "source": [
     "y = labels.copy()\n",
     "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "827"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(labels[labels.genus==0.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3142"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(labels[labels.genus==1.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A lot more honey bees than bumble bees."
    ]
   },
   {
@@ -611,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,11 +667,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, test_size=0.25, random_state=27)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "620"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_train[y_train.genus==0.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "207"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_test[y_test.genus==0.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2356"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_train[y_train.genus==1.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "786"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_test[y_test.genus==1.0])"
    ]
   },
   {
@@ -636,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +949,7 @@
        "2           SGDClassifier  0.545522"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,8 +975,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Classifier|F1Score|Best Params|\n",
+    "----------|-------|-----------|\n",
+    "Logistic Regression|0.546952|C=5<br>max_iter=500\n",
+    "Decision Tree|0.519326|max_depth=9<br>min_samples_split=2<br>splitter=random\n",
+    "Stochastic Gradient Descent|0.545522|alpha=0.001<br>max_iter=100<br>learning_rate=adaptive<br>eta0=0.5"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +1014,7 @@
        "993"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,8 +1024,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test on new images "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1392,7 @@
        "[993 rows x 42849 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1694,7 @@
        "2763    1.0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,12 +1705,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bee_type(label):\n",
-    "    return 'Honey Bee' if label == 1.0 else 'Bumble Bee'\n",
+    "    return 'Honey Bee' if label == 0.0 else 'Bumble Bee'\n",
     "\n",
     "def get_bee(id):\n",
     "    plt.imshow(get_image(id))\n",
@@ -1582,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1591,11 +1736,11 @@
      "text": [
       "Actual: \n",
       "1.0\n",
-      "Honey Bee\n",
+      "Bumble Bee\n",
       "\n",
       "Predicted: \n",
       "1.0\n",
-      "Honey Bee\n"
+      "Bumble Bee\n"
      ]
     },
     {
@@ -1617,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1626,11 +1771,11 @@
      "text": [
       "Actual: \n",
       "1.0\n",
-      "Honey Bee\n",
+      "Bumble Bee\n",
       "\n",
       "Predicted: \n",
       "1.0\n",
-      "Honey Bee\n"
+      "Bumble Bee\n"
      ]
     },
     {
@@ -1652,10 +1797,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1663,11 +1806,11 @@
      "text": [
       "Actual: \n",
       "0.0\n",
-      "Bumble Bee\n",
+      "Honey Bee\n",
       "\n",
       "Predicted: \n",
       "0.0\n",
-      "Bumble Bee\n"
+      "Honey Bee\n"
      ]
     },
     {
@@ -1689,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1698,11 +1841,11 @@
      "text": [
       "Actual: \n",
       "0.0\n",
-      "Bumble Bee\n",
+      "Honey Bee\n",
       "\n",
       "Predicted: \n",
       "1.0\n",
-      "Honey Bee\n"
+      "Bumble Bee\n"
      ]
     },
     {
@@ -1724,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1733,11 +1876,11 @@
      "text": [
       "Actual: \n",
       "1.0\n",
-      "Honey Bee\n",
+      "Bumble Bee\n",
       "\n",
       "Predicted: \n",
       "0.0\n",
-      "Bumble Bee\n"
+      "Honey Bee\n"
      ]
     },
     {
